# cv-inpainting

./: .gitignore  IMPLEMENTATION.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  steps.md  test_integration.py
data/: download_celeba.py
docker/: Dockerfile  docker-compose.yml
docs/: model_architecture.md
evaluation/: __init__.py  evaluate.py  metrics.py
models/: __init__.py  blocks.py  discriminator.py  generator.py
report/: report_generator.py
streamlit_app/: app.py
training/: __init__.py  config.py  loss_functions.py  train.py
utils/: __init__.py  data_loader.py
