[project]
name = "cv-inpainting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.0",
    "matplotlib>=3.8.0",
    "mlflow>=2.9.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "pytorch-fid>=0.3.0",
    "requests>=2.32.3",
    "scikit-image>=0.21.0",
    "scipy>=1.11.0",
    "streamlit>=1.29.0",
    "tensorboard>=2.15.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "tqdm>=4.66.0",
]
