[project]
name = "cv-inpainting"
version = "0.1.0"
description = "Image inpainting using GANs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.0",
    "matplotlib>=3.8.0",
    "mlflow>=2.9.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    "pandas>=2.1.0",
    "pillow>=10.2.0",
    "streamlit>=1.29.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "tqdm>=4.66.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
pythonpath = "."
